// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Info/Decorator Use Info as story decorator 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/ForwardRef Displays forwarded ref components correctly 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Forwarded Ref Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/ForwardRef Uses forwardRef displayName if available 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Forwarded Ref Button w/ Display Name
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/GitHub issues #1814 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div>
      <input
        type="text"
      />
      <textarea />
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/JSX Displays JSX in description 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Markdown Displays Markdown in description 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Markdown From external Markdown file 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Markdown From internal Markdown file 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Options.TableComponent Use a custom component for the table 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Options.excludedPropTypes Excludes propTypes that are in the excludedPropTypes array 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Options.header Shows or hides Info Addon header 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Options.inline Inlines component inside story 1`] = `
Array [
  <div>
    <div
      style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;padding:20px 40px 40px;border-radius:2px;background-color:#fff"
    >
      <div
        style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
      >
        <h1
          style="margin:0;padding:0;font-size:35px"
        >
          Addons|Info/Options.inline
        </h1>
        <h2
          style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
        >
          Inlines component inside story
        </h2>
      </div>
    </div>
  </div>,
  <div
    id="story-root"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  .emotion-5 {
  position: relative;
  overflow: hidden;
  color: #333333;
  border: 1px solid rgba(0,0,0,.1);
  background: #FFFFFF;
}

.emotion-2 {
  overflow-y: auto;
  height: 100%;
  overflow-x: auto;
  width: 100%;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 10px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #FFFFFF;
  z-index: 1;
}

.emotion-3 {
  border: 0 none;
  padding: 4px 10px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #333333;
  background: #FFFFFF;
  font-size: 12px;
  line-height: 16px;
  font-weight: 700;
  border-top: 1px solid rgba(0,0,0,.1);
  border-left: 1px solid rgba(0,0,0,.1);
  margin-left: -1px;
  border-radius: 4px 0 0 0;
}

.emotion-3:not(:last-child) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-3 + * {
  border-left: 1px solid rgba(0,0,0,.1);
  border-radius: 0;
}

.emotion-3:focus {
  box-shadow: #1EA7FD 0 -3px 0 0 inset;
  outline: 0 none;
}

<div>
    <div
      style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;padding:20px 40px 40px;border-radius:2px;background-color:#fff"
    >
      <p>
        Component should be inlined between description and PropType table
      </p>
      <h1
        style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
      >
        Story Source
      </h1>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-2"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs emotion-1"
                    >
                      <code
                        class="emotion-0"
                      >
                        <span
                          class="token tag"
                        >
                          <span
                            class="token tag"
                          >
                            <span
                              class="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              class="token class-name"
                            >
                              BaseButton
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            disabled
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token boolean"
                            >
                              false
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            label
                          </span>
                          <span
                            class="token attr-value"
                          >
                            <span
                              class="token punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                            Button
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              class="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              class="token punctuation"
                            >
                              (
                            </span>
                            <span
                              class="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            style
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            class="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="emotion-4"
        >
          <button
            class="emotion-3"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
      >
        Prop Types
      </h1>
      <div>
        <h3
          style="margin:20px 0 0 0"
        >
          "BaseButton" Component
        </h3>
        <table
          class="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="info-table-monospace"
              >
                disabled
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  bool
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  false
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                label
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  string
                </span>
              </td>
              <td>
                yes
              </td>
              <td>
                -
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                onClick
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  func
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  onClick
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                style
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  other
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  {}
                </span>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Addons|Info/Options.propTables Shows additional component prop tables 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Options.propTablesExclude Exclude component from prop tables 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div>
      <button
        type="button"
      >
        Button
      </button>
      <button
        type="button"
      >
        Flow Typed Button
      </button>
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Options.source Shows or hides Info Addon source 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Options.styles Extend info styles with an object 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:purple;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Options.styles Full control over styles using a function 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Parameters Disable the addon entirely 1`] = `
<button
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Addons|Info/Parameters Overwrite the parameters with markdown variable 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Parameters Overwrite the text parameter with markdown inline 1`] = `
Array [
  <div>
    <div
      style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;padding:20px 40px 40px;border-radius:2px;background-color:#fff"
    >
      <div
        style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
      >
        <h1
          style="margin:0;padding:0;font-size:35px;color:green"
        >
          Addons|Info/Parameters
        </h1>
        <h2
          style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
        >
          Overwrite the text parameter with markdown inline
        </h2>
      </div>
    </div>
  </div>,
  <div
    id="story-root"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  .emotion-5 {
  position: relative;
  overflow: hidden;
  color: #333333;
  border: 1px solid rgba(0,0,0,.1);
  background: #FFFFFF;
}

.emotion-2 {
  overflow-y: auto;
  height: 100%;
  overflow-x: auto;
  width: 100%;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 10px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #FFFFFF;
  z-index: 1;
}

.emotion-3 {
  border: 0 none;
  padding: 4px 10px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #333333;
  background: #FFFFFF;
  font-size: 12px;
  line-height: 16px;
  font-weight: 700;
  border-top: 1px solid rgba(0,0,0,.1);
  border-left: 1px solid rgba(0,0,0,.1);
  margin-left: -1px;
  border-radius: 4px 0 0 0;
}

.emotion-3:not(:last-child) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-3 + * {
  border-left: 1px solid rgba(0,0,0,.1);
  border-radius: 0;
}

.emotion-3:focus {
  box-shadow: #1EA7FD 0 -3px 0 0 inset;
  outline: 0 none;
}

<div>
    <div
      style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;padding:20px 40px 40px;border-radius:2px;background-color:#fff"
    >
      <p>
        description or documentation about my component, supports markdown
      </p>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-2"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs emotion-1"
                    >
                      <code
                        class="emotion-0"
                      >
                        <span
                          class="token operator"
                        >
                          &lt;
                        </span>
                        Button
                        <span
                          class="token operator"
                        >
                          &gt;
                        </span>
                        Click Here
                        <span
                          class="token operator"
                        >
                          &lt;
                        </span>
                        <span
                          class="token operator"
                        >
                          /
                        </span>
                        Button
                        <span
                          class="token operator"
                        >
                          &gt;
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="emotion-4"
        >
          <button
            class="emotion-3"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
      >
        Story Source
      </h1>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-2"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs emotion-1"
                    >
                      <code
                        class="emotion-0"
                      >
                        <span
                          class="token tag"
                        >
                          <span
                            class="token tag"
                          >
                            <span
                              class="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              class="token class-name"
                            >
                              BaseButton
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            disabled
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token boolean"
                            >
                              false
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            label
                          </span>
                          <span
                            class="token attr-value"
                          >
                            <span
                              class="token punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                            Button
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              class="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              class="token punctuation"
                            >
                              (
                            </span>
                            <span
                              class="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            style
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            class="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="emotion-4"
        >
          <button
            class="emotion-3"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
      >
        Prop Types
      </h1>
      <div>
        <h3
          style="margin:20px 0 0 0"
        >
          "BaseButton" Component
        </h3>
        <table
          class="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="info-table-monospace"
              >
                disabled
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  bool
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  false
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                label
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  string
                </span>
              </td>
              <td>
                yes
              </td>
              <td>
                -
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                onClick
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  func
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  onClick
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                style
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  other
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  {}
                </span>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Addons|Info/Parameters Overwriting and extending the parameters and options set stories-wise 1`] = `
Array [
  <div>
    <div
      style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;padding:20px 40px 40px;border-radius:2px;background-color:#fff"
    >
      <div
        style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
      >
        <h1
          style="margin:0;padding:0;font-size:35px;color:green"
        >
          Addons|Info/Parameters
        </h1>
        <h2
          style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
        >
          Overwriting and extending the parameters and options set stories-wise
        </h2>
      </div>
    </div>
  </div>,
  <div
    id="story-root"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  .emotion-5 {
  position: relative;
  overflow: hidden;
  color: #333333;
  border: 1px solid rgba(0,0,0,.1);
  background: #FFFFFF;
}

.emotion-2 {
  overflow-y: auto;
  height: 100%;
  overflow-x: auto;
  width: 100%;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 10px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #FFFFFF;
  z-index: 1;
}

.emotion-3 {
  border: 0 none;
  padding: 4px 10px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #333333;
  background: #FFFFFF;
  font-size: 12px;
  line-height: 16px;
  font-weight: 700;
  border-top: 1px solid rgba(0,0,0,.1);
  border-left: 1px solid rgba(0,0,0,.1);
  margin-left: -1px;
  border-radius: 4px 0 0 0;
}

.emotion-3:not(:last-child) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-3 + * {
  border-left: 1px solid rgba(0,0,0,.1);
  border-radius: 0;
}

.emotion-3:focus {
  box-shadow: #1EA7FD 0 -3px 0 0 inset;
  outline: 0 none;
}

<div>
    <div
      style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;padding:20px 40px 40px;border-radius:2px;background-color:#fff"
    >
      <p>
        Label propType should be excluded
      </p>
      <h1
        style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
      >
        Story Source
      </h1>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-2"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs emotion-1"
                    >
                      <code
                        class="emotion-0"
                      >
                        <span
                          class="token tag"
                        >
                          <span
                            class="token tag"
                          >
                            <span
                              class="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              class="token class-name"
                            >
                              BaseButton
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            disabled
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token boolean"
                            >
                              false
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            label
                          </span>
                          <span
                            class="token attr-value"
                          >
                            <span
                              class="token punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                            Button
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              class="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              class="token punctuation"
                            >
                              (
                            </span>
                            <span
                              class="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            style
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            class="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="emotion-4"
        >
          <button
            class="emotion-3"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
      >
        Prop Types
      </h1>
      <div>
        <h3
          style="margin:20px 0 0 0"
        >
          "BaseButton" Component
        </h3>
        <table
          class="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="info-table-monospace"
              >
                disabled
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  bool
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  false
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                onClick
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  func
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  onClick
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                style
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  other
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  {}
                </span>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Addons|Info/Parameters Using paramaters across all stories 1`] = `
Array [
  <div>
    <div
      style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;padding:20px 40px 40px;border-radius:2px;background-color:#fff"
    >
      <div
        style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
      >
        <h1
          style="margin:0;padding:0;font-size:35px;color:green"
        >
          Addons|Info/Parameters
        </h1>
        <h2
          style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
        >
          Using paramaters across all stories
        </h2>
      </div>
    </div>
  </div>,
  <div
    id="story-root"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  .emotion-5 {
  position: relative;
  overflow: hidden;
  color: #333333;
  border: 1px solid rgba(0,0,0,.1);
  background: #FFFFFF;
}

.emotion-2 {
  overflow-y: auto;
  height: 100%;
  overflow-x: auto;
  width: 100%;
  position: relative;
}

.emotion-2 code {
  padding-right: 10px;
}

.emotion-2 * .token {
  font-family: "Operator Mono","Fira Code Retina","Fira Code","FiraCode-Retina","Andale Mono","Lucida Console",Consolas,Monaco,monospace;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 * .token.comment {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.prolog {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.doctype {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.cdata {
  color: #008000;
  font-style: italic;
}

.emotion-2 * .token.string {
  color: #A31515;
}

.emotion-2 * .token.punctuation {
  color: #393A34;
}

.emotion-2 * .token.operator {
  color: #393A34;
}

.emotion-2 * .token.url {
  color: #36acaa;
}

.emotion-2 * .token.symbol {
  color: #36acaa;
}

.emotion-2 * .token.number {
  color: #36acaa;
}

.emotion-2 * .token.boolean {
  color: #36acaa;
}

.emotion-2 * .token.variable {
  color: #36acaa;
}

.emotion-2 * .token.constant {
  color: #36acaa;
}

.emotion-2 * .token.inserted {
  color: #36acaa;
}

.emotion-2 * .token.atrule {
  color: #0000ff;
}

.emotion-2 * .token.keyword {
  color: #0000ff;
}

.emotion-2 * .token.attr-value {
  color: #0000ff;
}

.emotion-2 * .token.function {
  color: #393A34;
}

.emotion-2 * .token.deleted {
  color: #9a050f;
}

.emotion-2 * .token.important {
  font-weight: bold;
}

.emotion-2 * .token.bold {
  font-weight: bold;
}

.emotion-2 * .token.italic {
  font-style: italic;
}

.emotion-2 * .token.class-name {
  color: #2B91AF;
}

.emotion-2 * .token.tag {
  color: #800000;
}

.emotion-2 * .token.selector {
  color: #800000;
}

.emotion-2 * .token.attr-name {
  color: #ff0000;
}

.emotion-2 * .token.property {
  color: #ff0000;
}

.emotion-2 * .token.regex {
  color: #ff0000;
}

.emotion-2 * .token.entity {
  color: #ff0000;
}

.emotion-2 * .token.directive.tag .tag {
  background: #ffff00;
  color: #393A34;
}

.emotion-2 * .language-json .token.boolean {
  color: #0000ff;
}

.emotion-2 * .language-json .token.number {
  color: #0000ff;
}

.emotion-2 * .language-json .token.property {
  color: #2B91AF;
}

.emotion-2 * .namespace {
  opacity: 0.7;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0;
  padding: 10px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 0;
  opacity: 1;
}

.emotion-4 {
  position: absolute;
  bottom: 0;
  right: 0;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #FFFFFF;
  z-index: 1;
}

.emotion-3 {
  border: 0 none;
  padding: 4px 10px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #333333;
  background: #FFFFFF;
  font-size: 12px;
  line-height: 16px;
  font-weight: 700;
  border-top: 1px solid rgba(0,0,0,.1);
  border-left: 1px solid rgba(0,0,0,.1);
  margin-left: -1px;
  border-radius: 4px 0 0 0;
}

.emotion-3:not(:last-child) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-3 + * {
  border-left: 1px solid rgba(0,0,0,.1);
  border-radius: 0;
}

.emotion-3:focus {
  box-shadow: #1EA7FD 0 -3px 0 0 inset;
  outline: 0 none;
}

<div>
    <div
      style="font-family:Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif;color:black;font-weight:300;line-height:1.45;font-size:15px;padding:20px 40px 40px;border-radius:2px;background-color:#fff"
    >
      <p>
        This text should be displayed on every story and the component should be inlined between description and PropType table
      </p>
      <h1
        style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
      >
        Story Source
      </h1>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-2"
          data-simplebar="true"
        >
          <div
            class="simplebar-wrapper"
          >
            <div
              class="simplebar-height-auto-observer-wrapper"
            >
              <div
                class="simplebar-height-auto-observer"
              />
            </div>
            <div
              class="simplebar-mask"
            >
              <div
                class="simplebar-offset"
              >
                <div
                  class="simplebar-content-wrapper"
                >
                  <div
                    class="simplebar-content"
                  >
                    <pre
                      class="hljs emotion-1"
                    >
                      <code
                        class="emotion-0"
                      >
                        <span
                          class="token tag"
                        >
                          <span
                            class="token tag"
                          >
                            <span
                              class="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              class="token class-name"
                            >
                              BaseButton
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            disabled
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token boolean"
                            >
                              false
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            label
                          </span>
                          <span
                            class="token attr-value"
                          >
                            <span
                              class="token punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                            Button
                            <span
                              class="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            onClick
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              class="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              class="token punctuation"
                            >
                              (
                            </span>
                            <span
                              class="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            class="token attr-name"
                          >
                            style
                          </span>
                          <span
                            class="token script language-javascript"
                          >
                            <span
                              class="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              {
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                            <span
                              class="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          

                          <span
                            class="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="simplebar-placeholder"
            />
          </div>
          <div
            class="simplebar-track simplebar-horizontal"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
          <div
            class="simplebar-track simplebar-vertical"
          >
            <div
              class="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          class="emotion-4"
        >
          <button
            class="emotion-3"
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
      >
        Prop Types
      </h1>
      <div>
        <h3
          style="margin:20px 0 0 0"
        >
          "BaseButton" Component
        </h3>
        <table
          class="info-table"
        >
          <thead>
            <tr>
              <th>
                property
              </th>
              <th>
                propType
              </th>
              <th>
                required
              </th>
              <th>
                default
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                class="info-table-monospace"
              >
                disabled
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  bool
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  false
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                label
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  string
                </span>
              </td>
              <td>
                yes
              </td>
              <td>
                -
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                onClick
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  func
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  onClick
                </span>
              </td>
              <td />
            </tr>
            <tr>
              <td
                class="info-table-monospace"
              >
                style
              </td>
              <td
                class="info-table-monospace"
              >
                <span>
                  other
                </span>
              </td>
              <td>
                -
              </td>
              <td>
                <span>
                  {}
                </span>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Addons|Info/React Docgen Comments from Flow declarations 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Flow Typed Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/React Docgen Comments from PropType declarations 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Docgen Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/React Docgen Comments from component declaration 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/React Docgen Comments from named export component declaration 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Story Source Array prop 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <table>
      <thead>
        <tr>
          <th>
            name
          </th>
          <th>
            type
          </th>
          <th>
            default
          </th>
          <th>
            description
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            label
            <span
              style="color:red"
            >
              *
            </span>
          </td>
          <td>
            string
          </td>
          <td />
          <td>
            Text to display inside button
          </td>
        </tr>
        <tr>
          <td>
            disabled
          </td>
          <td>
            boolean
          </td>
          <td>
            false
          </td>
          <td />
        </tr>
        <tr>
          <td>
            onClick
            <span
              style="color:red"
            >
              *
            </span>
          </td>
          <td>
            function
          </td>
          <td />
          <td>
            Callback for when button is clicked
          </td>
        </tr>
        <tr>
          <td>
            style
          </td>
          <td>
            object
          </td>
          <td>
            {}
          </td>
          <td>
            Styles to apply to button
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Story Source Children 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <div>
      <p>
        Here is my nice button:
      </p>
      <button
        type="button"
      >
        Button
      </button>
    </div>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Story Source Many props 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      disabled=""
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Story Source Object prop 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      style="color:midnightblue;background-color:powderblue;font-size:16px;box-shadow:1px 1px rgba(0, 0, 0, .07);border-radius:5px;padding:4px 8px"
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/Story Source One prop 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Addons|Info/deprecated Displays Markdown in description 1`] = `
Array [
  <div
    style="position:relative;z-index:0"
  >
    <button
      type="button"
    >
      Button
    </button>
  </div>,
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#027ac5;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>,
]
`;
